some design added, minor fixes

--- a/src/views/main-page/style.css
+++ b/src/views/main-page/style.css
@@ -4,7 +4,7 @@
   min-height: 100vh;
 }
 
-.app-header {
+.app-header, .app-footer {
   height: 10vh;
   display: flex;
   flex-direction: row;
@@ -16,16 +16,5 @@
 
 .app-content {
   flex: 1;
-  padding: 20px 100px;
   text-align: left;
-}
-
-.app-footer {
-  height: 10vh;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 1vmin);
-  color: white;
 }
