--- a/src/views/app.css
+++ b/src/views/app.css
@@ -7,5 +7,10 @@ body {
     -moz-osx-font-smoothing: grayscale;
   
     background-color: #4FBAE4;
+
+    font-size: calc(10px + 1vmin);
   }
   
+  h1, h2, h3, h4, h5 {
+    color: #071858;
+  }
