--- a/src/views/main-page/style.css
+++ b/src/views/main-page/style.css
@@ -9,12 +9,18 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 1vmin);
   color: white;
+}
+
+.app-header {
+  justify-content: space-between;
 }
 
 .app-content {
   flex: 1;
   text-align: left;
+}
+
+.app-footer {
+  justify-content: center;
 }
